--- a/package.json
+++ b/package.json
@@ -1,9 +1,9 @@
 {
-  "name": "puppeteer-page-proxy",
-  "description": "Additional Node.js module to use with 'puppeteer' for setting proxies per page basis.",
+  "name": "puppeteer-page-proxy-abowcut",
+  "description": "Additional Node.js module to use with 'puppeteer' for setting proxies per page basis. Altered by abowcut",
   "version": "1.2.8",
-  "author": "Cuadrix <cuadrix12000@gmail.com> (https://github.com/Cuadrix)",
-  "homepage": "https://github.com/Cuadrix/puppeteer-page-proxy",
+  "author": "abowcut",
+  "homepage": "https://github.com/abowcut/puppeteer-page-proxy",
   "main": "./src/index.js",
   "types": "./src/index.d.ts",
   "scripts": {
@@ -11,7 +11,7 @@
   },
   "repository": {
     "type": "git",
-    "url": "https://github.com/Cuadrix/puppeteer-page-proxy.git"
+    "url": "https://github.com/abowcut/puppeteer-page-proxy"
   },
   "keywords": [
     "puppeteer",
